changing 'wlindner.github.com2' to be 'wlindner.github.com'

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # 2. config.build.yml
 # 3. config.yml
 
-name: wlindner.github.com2
+name: wlindner.github.com
 description: William Lindner's Personal Blog.
 author:
   name: William Lindner
