--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "wlindnergithubcom",
   "version": "0.0.0",
   "dependencies": {
-    "masonry": "~3.1.5"
+    "masonry": "~3.1.5",
+    "pjax-standalone": "~0.6.0"
   }
 }
