Added Velocity. Got transition animations working after bug fixing pjax-standalone library.

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "masonry": "~3.1.5",
-    "pjax-standalone": "~0.6.0"
+    "pjax-standalone": "~0.6.0",
+    "velocity": "~1.1.0"
   }
 }
