--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "masonry": "~3.1.5",
     "pjax-standalone": "~0.6.0",
-    "velocity": "~1.1.0"
+    "velocity": "~1.1.0",
+    "jquery": "~2.1.1"
   }
 }
