--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "grunt-autoprefixer": "~3.0.3",
     "grunt-build-control": "~0.7.1",
     "grunt-concurrent": "~2.3.1",
-    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-connect": "~1.0.2",
     "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-csslint": "~1.0.0",
-    "grunt-contrib-cssmin": "~1.0.1",
-    "grunt-contrib-htmlmin": "~2.0.0",
+    "grunt-contrib-csslint": "^2.0.0",
+    "grunt-contrib-cssmin": "^2.2.0",
+    "grunt-contrib-htmlmin": "^2.4.0",
     "grunt-contrib-imagemin": "~1.0.0",
-    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-sass": "~1.0.0",
-    "grunt-contrib-uglify": "~2.0.0",
+    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-filerev": "~2.3.1",
     "grunt-jekyll": "~0.4.2",
-    "grunt-svgmin": "~3.3.0",
+    "grunt-svgmin": "^4.0.0",
     "grunt-usemin": "~3.1.1",
     "jshint-stylish": "~2.2.1",
     "load-grunt-tasks": "~3.5.2",
